<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbackground"
    android:visibility="visible"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signupView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="242dp"
        android:fontFamily="sans-serif-medium"
        android:text="Sign Up"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:fontFamily="sans-serif"
        android:text="Full Name:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="367dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="119dp"
        android:fontFamily="sans-serif"
        android:text="Phone Number:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="364dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="143dp"
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="219dp"
        android:fontFamily="sans-serif"
        android:text="Email:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="367dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="sans-serif"
        android:text="Password:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="364dp"
        android:layout_height="47dp"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="357dp"
        android:layout_height="53dp"
        android:layout_marginTop="402dp"
        android:backgroundTint="@color/secondMainColor"
        android:text="Sign Up"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="115dp"
        android:text="Already have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/mainColor"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

</androidx.constraintlayout.widget.ConstraintLayout>