<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">

    <View
        android:id="@+id/curvedRectangle"
        android:layout_width="412dp"
        android:layout_height="237dp"
        android:background="@drawable/curved_rectangle"
        android:backgroundTint="@color/thirdMainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Today"
        android:textColor="#D3FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangle" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/date_tag"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/timeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/curvedRectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewToday" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_tag"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/curvedRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateView" />

    <TextView
        android:id="@+id/appNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:text="BANK ME ///"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangle"
        app:layout_constraintTop_toTopOf="@+id/curvedRectangle" />

    <ImageView
        android:id="@+id/btnViewProfile"
        android:layout_width="43dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintEnd_toEndOf="@+id/curvedRectangle"
        app:layout_constraintTop_toTopOf="@+id/curvedRectangle"
        app:srcCompat="@drawable/profilepic" />

    <ImageView
        android:id="@+id/btnViewNotification"
        android:layout_width="29dp"
        android:layout_height="37dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toStartOf="@+id/btnViewProfile"
        app:layout_constraintTop_toTopOf="@+id/curvedRectangle"
        app:srcCompat="@drawable/bellicon" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="187dp"
        android:backgroundTint="#F8F5F5"
        android:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/curvedRectangle"
        app:layout_constraintTop_toBottomOf="@+id/timeView" />

    <ImageView
        android:id="@+id/btnSavings"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDeposits"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/savingicon" />

    <ImageView
        android:id="@+id/btnDeposits"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLoans"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSavings"
        app:srcCompat="@drawable/depositicon" />

    <ImageView
        android:id="@+id/btnLoans"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMores"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeposits"
        app:srcCompat="@drawable/loanicon" />

    <ImageView
        android:id="@+id/btnMores"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLoans"
        app:srcCompat="@drawable/moreicon" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="396dp"
        android:layout_height="202dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/promoimg" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/promo_text"
        android:textColor="@color/sixthMainColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangle" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="392dp"
        android:layout_height="87dp"
        android:text="@string/promo_dis"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        app:layout_constraintBottom_toTopOf="@+id/btnSavings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="162dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/aboutusicon" />

</androidx.constraintlayout.widget.ConstraintLayout>