<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavingsActivity">

    <ImageView
        android:id="@+id/btnPreviousSavings"
        android:layout_width="33dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/previousicon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="53dp"
        android:fontFamily="sans-serif-black"
        android:text="Savings"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fixNameView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="21dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Bank 01"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/curvedRectangleSaving1"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:background="@drawable/curved_box"
        android:backgroundTint="@color/forthMainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixNameView1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:text="Total Balance"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/balanceView1"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangleSaving1"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangleSaving1" />

    <TextView
        android:id="@+id/balanceView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:text="@string/saving_balance1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/curvedRectangleSaving1"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangleSaving1"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/fixNameView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Bank 02"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangleSaving1" />

    <View
        android:id="@+id/curvedRectangleSaving2"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:background="@drawable/curved_box"
        android:backgroundTint="@color/forthMainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixNameView2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:text="Total Balance"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/balanceView2"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangleSaving2"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangleSaving2" />

    <TextView
        android:id="@+id/balanceView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:text="@string/saving_balance2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/curvedRectangleSaving2"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangleSaving2"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Bank 03"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangleSaving2" />

    <View
        android:id="@+id/curvedRectangleSaving3"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:background="@drawable/curved_box"
        android:backgroundTint="@color/forthMainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:text="Total Balance"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/balanceView3"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangleSaving3"
        app:layout_constraintTop_toBottomOf="@+id/curvedRectangleSaving3" />

    <TextView
        android:id="@+id/balanceView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:text="@string/saving_balance3"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/curvedRectangleSaving3"
        app:layout_constraintStart_toStartOf="@+id/curvedRectangleSaving3"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/addSavingButton"
        android:layout_width="49dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addicon" />

    <ImageView
        android:id="@+id/editSavingButton"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="293dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addSavingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/edit" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/savingBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="fixNameView1,curvedRectangleSaving1,textView9,balanceView1" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/savingBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="fixNameView2,curvedRectangleSaving2,textView10,balanceView2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/savingBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textView8,curvedRectangleSaving3,textView11,balanceView3" />

</androidx.constraintlayout.widget.ConstraintLayout>